# hls-video-player

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  colab_launch.ipynb  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: gradio_library_ui.py  gradio_ui.py  main.py  player_embed.py  static_mount.py
app/static/: player.css
backend/: Dockerfile  package-lock.json  package.json
backend/scripts/: convert.js
backend/src/: app.js  index.js
docker/: converter-entry.py  converter.Dockerfile  docker-compose.dev.yml  docker-compose.yml  gui.Dockerfile
docs/: troubleshoot.md
docs/migration-plan/: 01-architecture.md  (+11 more)
gui-web/: .gitignore  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
hls_video/: cli.py  config.py  conversion_runner.py  converted_index.py  drive_browser.py  favorites.py  ffmpeg_runner.py  hls_converter.py  hwaccel.py  job_registry.py  library_catalog.py  library_cli.py  library_converter.py  library_settings.py  logging_setup.py  master_playlist.py  progress_parser.py  source_catalog.py  sprite_generator.py  thumbnail_generator.py  video_catalog.py  vtt_builder.py
nginx/: nginx.conf
scripts/: sync-to-drive.sh
static/: playerFactory.js
tests/: test_config.py  test_conversion_runner.py  test_drive_browser.py  test_ffmpeg_runner.py  test_hls_converter.py  test_hwaccel.py  test_integration.py  test_job_registry.py  test_master_playlist.py  test_progress_parser.py  test_source_catalog.py  test_sprite_generator.py  test_video_catalog.py  test_vtt_builder.py
(+67 files in other folders)
