[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hls-video-player"
version = "0.1.0"
description = "MP4 → HLS streaming library with sprite-based seekbar preview"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
app = [
    "gradio>=4.44",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hls_video*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
